# nassercpa18-ksa

./: .gitignore  README.md
ai_chatgpt_discuss/: __manifest__.py
ai_chatgpt_discuss/controllers/: ai_chat_controller.py
ai_chatgpt_discuss/models/: __init__.py  ai_config.py  mail_channel.py
ai_chatgpt_discuss/security/: ir.model.access.csv
ai_chatgpt_discuss/views/: ai_config_views.xml
bi_project_custom/: __manifest__.py
bi_project_custom/controllers/: controllers.py
bi_project_custom/demo/: demo.xml
bi_project_custom/models/: __init__.py  biometric_device.py  ir_ui_menu  models.py  wizard.py
bi_project_custom/security/: ir.model.access.csv
bi_project_custom/views/: project_project.xml  templates.xml  views.xml
cit_aircall_api_integration/: __manifest__.py
cit_aircall_api_integration/controllers/: main.py
cit_aircall_api_integration/data/: cron_jobs_data.xml  res_partner_demo.xml
cit_aircall_api_integration/models/: __init__.py  aircall_connection.py  aircall_details.py  aircall_messages.py  aircall_webhook.py  authorization.py  base.py  email.py  mail_message.py  number.py  phone.py  res_company.py  res_config_settings.py  res_partner.py
cit_aircall_api_integration/security/: ir.model.access.csv
cit_aircall_api_integration/views/: aircall_details_view.xml  aircall_message_history.xml  mail_message_view.xml  number_views.xml  res_company_view.xml  res_config_settings_view.xml  res_partner_view.xml
crm_direct_email/: __manifest__.py
crm_direct_email/models/: mail_compose.py
hr_zk_attendance/: README.rst  __init__.py  __manifest__.py
hr_zk_attendance/doc/: RELEASE_NOTES.md
hr_zk_attendance/models/: __init__.py  biometric_device_details.py  daily_attendance.py  hr_employee.py  zk_machine_attendance.py
hr_zk_attendance/tests/: __init__.py  test_biometric_device_details.py  test_daily_attendance.py  test_zk_machine_attendance.py
kbi_custom/: __init__.py  __manifest__.py
kbi_custom/controllers/: main.py
kbi_custom/data/: sequence.xml
kbi_custom/models/: __init__.py  account.py  analytic.py  analytic_profit_loss.py  crm_lead.py  kbi_agreement.py  product.py  res_config_settings.py  res_partner.py  sale_order.py
kbi_custom/report/: analytic_profit_loss_report.xml  distributed_values.xml
kbi_custom/security/: ir.model.access.csv  security.xml
kbi_custom/views/: agreement.xml  analytic.xml  analytic_profit_loss_views.xml  crm_lead.xml  external_layout_batch_bill.xml  external_layout_seti.xml  hr_payslip_line_style.xml  motalba_all.xml  order_verify.xml  paperformat.xml  payment.xml  product.xml  quality_customer_report.xm  quality_customer_report.xml  report_customer_bill_report.xml  report_customer_invoice_report2.xml  report_customer_project_report.xml  report_vendor_batch.xml  report_vendor_batch_bill.xml  res_config_settings.xml  res_partner.xml  sale_order.xml
kbi_custom/wizards/: __init__.py  analytic_profit_loss_wizard.py
odashboard-18.0.1.0.0/odashboard/: __manifest__.py  hooks.py
odoo-biometric-attendance/: __manifest__.py
odoo-biometric-attendance/controllers/: cams_attendance.py
odoo_ai_agent/: __init__.py  __manifest__.py
odoo_ai_agent/controllers/: main.py
odoo_ai_agent/models/: __init__.py  agent_dashboard.py  agent_response_history.py  agent_response_history_step.py  ai_email_matrix.py  ai_email_matrix_line.py  call_back.py  res_config_settings.py  res_users.py  user_email_credentials.py
odoo_ai_agent/security/: ir.model.access.csv  security.xml
odoo_ai_agent/views/: agent_dashboard.xml  agent_response_history_views.xml  ai_email_matrix_views.xml  cron.xml  main_menu.xml  res_config_settings_views.xml  res_users.xml  user_email_credentials.xml
odoo_ai_agent/wizard/: __init__.py  history_step_query_view_wizard.py  history_step_query_wizard_views.xml  product_select_wizard.py  product_select_wizard_views.xml
partner-contact-18.0/: README.md
partner-contact-18.0/base_location/: __manifest__.py
partner-contact-18.0/base_location_nuts/: README.rst  __manifest__.py
partner-contact-18.0/base_partner_sequence/: README.rst  __manifest__.py
partner-contact-18.0/partner_accreditation/: README.rst  __manifest__.py
partner-contact-18.0/partner_address_split/: README.rst  __manifest__.py
partner-contact-18.0/partner_category_description/: README.rst  __manifest__.py
partner-contact-18.0/setup/_metapackage/: pyproject.toml
partner_whatsapp_link/: __manifest__.py
report_py3o/: requirements.txt
saudi_einvoice_knk/: __manifest__.py
xf_approval_route_base/: __manifest__.py
xf_approval_route_sale/: __manifest__.py
xf_demo_data/: __manifest__.py
(+304 files in other folders)
