[project]
name = "odoo-addons-oca-partner-contact"
version = "18.0.20260416.0"
dependencies = [
    "odoo-addon-account_partner_company_group==18.0.*",
    "odoo-addon-animal==18.0.*",
    "odoo-addon-base_country_state_translatable==18.0.*",
    "odoo-addon-base_location==18.0.*",
    "odoo-addon-base_location_geonames_import==18.0.*",
    "odoo-addon-base_location_nuts==18.0.*",
    "odoo-addon-base_partner_company_group==18.0.*",
    "odoo-addon-base_partner_sequence==18.0.*",
    "odoo-addon-crm_partner_company_group==18.0.*",
    "odoo-addon-partner_accreditation==18.0.*",
    "odoo-addon-partner_address_split==18.0.*",
    "odoo-addon-partner_address_street3==18.0.*",
    "odoo-addon-partner_affiliate==18.0.*",
    "odoo-addon-partner_bank_acc_holder_name==18.0.*",
    "odoo-addon-partner_bank_code==18.0.*",
    "odoo-addon-partner_capital==18.0.*",
    "odoo-addon-partner_category_description==18.0.*",
    "odoo-addon-partner_category_security==18.0.*",
    "odoo-addon-partner_category_type==18.0.*",
    "odoo-addon-partner_company_default==18.0.*",
    "odoo-addon-partner_company_group==18.0.*",
    "odoo-addon-partner_company_type==18.0.*",
    "odoo-addon-partner_contact_access_link==18.0.*",
    "odoo-addon-partner_contact_address_default==18.0.*",
    "odoo-addon-partner_contact_age_range==18.0.*",
    "odoo-addon-partner_contact_birthdate==18.0.*",
    "odoo-addon-partner_contact_birthplace==18.0.*",
    "odoo-addon-partner_contact_department==18.0.*",
    "odoo-addon-partner_contact_gender==18.0.*",
    "odoo-addon-partner_contact_job_position==18.0.*",
    "odoo-addon-partner_contact_lang==18.0.*",
    "odoo-addon-partner_contact_nationality==18.0.*",
    "odoo-addon-partner_contact_personal_information_page==18.0.*",
    "odoo-addon-partner_contact_role==18.0.*",
    "odoo-addon-partner_contact_tags_in_popup==18.0.*",
    "odoo-addon-partner_contact_type_end_user==18.0.*",
    "odoo-addon-partner_country_lang==18.0.*",
    "odoo-addon-partner_country_state_required==18.0.*",
    "odoo-addon-partner_deduplicate_acl==18.0.*",
    "odoo-addon-partner_deduplicate_by_website==18.0.*",
    "odoo-addon-partner_deduplicate_filter==18.0.*",
    "odoo-addon-partner_disable_gravatar==18.0.*",
    "odoo-addon-partner_duns==18.0.*",
    "odoo-addon-partner_email_check==18.0.*",
    "odoo-addon-partner_email_duplicate_warn==18.0.*",
    "odoo-addon-partner_employee_quantity==18.0.*",
    "odoo-addon-partner_external_map==18.0.*",
    "odoo-addon-partner_fax==18.0.*",
    "odoo-addon-partner_firstname==18.0.*",
    "odoo-addon-partner_identification==18.0.*",
    "odoo-addon-partner_identification_eori==18.0.*",
    "odoo-addon-partner_identification_gln==18.0.*",
    "odoo-addon-partner_identification_unique_by_category==18.0.*",
    "odoo-addon-partner_industry_parent==18.0.*",
    "odoo-addon-partner_industry_secondary==18.0.*",
    "odoo-addon-partner_label==18.0.*",
    "odoo-addon-partner_manual_rank==18.0.*",
    "odoo-addon-partner_middlename==18.0.*",
    "odoo-addon-partner_mobile_duplicate_warn==18.0.*",
    "odoo-addon-partner_multi_relation==18.0.*",
    "odoo-addon-partner_phone_secondary==18.0.*",
    "odoo-addon-partner_phonecall_schedule==18.0.*",
    "odoo-addon-partner_pricelist_search==18.0.*",
    "odoo-addon-partner_priority==18.0.*",
    "odoo-addon-partner_property==18.0.*",
    "odoo-addon-partner_purchase_manager==18.0.*",
    "odoo-addon-partner_rank_single==18.0.*",
    "odoo-addon-partner_readonly_security==18.0.*",
    "odoo-addon-partner_ref_unique==18.0.*",
    "odoo-addon-partner_search_alias==18.0.*",
    "odoo-addon-partner_second_lastname==18.0.*",
    "odoo-addon-partner_shipping_policy==18.0.*",
    "odoo-addon-partner_stage==18.0.*",
    "odoo-addon-partner_store==18.0.*",
    "odoo-addon-partner_subject_to_vat==18.0.*",
    "odoo-addon-partner_supplier_ref==18.0.*",
    "odoo-addon-partner_supplier_ref_sequence==18.0.*",
    "odoo-addon-partner_tier_validation==18.0.*",
    "odoo-addon-partner_title_active==18.0.*",
    "odoo-addon-partner_title_order==18.0.*",
    "odoo-addon-partner_type_base==18.0.*",
    "odoo-addon-partner_tz==18.0.*",
    "odoo-addon-partner_vat_unique==18.0.*",
    "odoo-addon-purchase_supplier_rank==18.0.*",
    "odoo-addon-sale_customer_rank==18.0.*",
    "odoo-addon-sale_partner_company_group==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
